# external-server

./: .coverage  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  external_server_main.py  main.py  pyproject.toml  requirements.txt
config/: config.json  config.json.example  for_docker.json  logging.json
external-server/: server.py  utils.py
external_server/: __init__.py  __main__.py  ack_checker.py  command_waiting_thread.py  config.py  constants.py  event_queue.py  exceptions.py  external_server.py  external_server_api_client.py  logs.py  message_creator.py  mqtt_client.py  msg_checker.py  server.py  server_logging.py  server_message_creator.py  server_messages.py  session.py  structures.py  timeout.py  utils.py
external_server/adapters/: api_adapter.py  api_client.py  mqtt_adapter.py  mqtt_client.py
external_server/checker/: __init__.py  ack_checker.py  checker.py  command_messages_checker.py  msg_checker.py  order_checker.py  session_checker.py  session_timeout_checker.py  status_order_checker.py
external_server/checkers/: __init__.py  checker.py  command_checker.py  mqtt_session.py  session.py  session_timeout_checker.py  status_checker.py  status_order_checker.py
external_server/clients/: api_client.py  mqtt_client.py
external_server/models/: devices.py  event_queue.py  events.py  exceptions.py  messages.py  server_messages.py  server_module.py  structures.py
external_server/modules/: __init__.py  message_creator.py  message_parser.py  module_type.py
external_server/modules/car_accessory_module/: CMakeLists.txt  README.md  creator.py  main.cpp  type.py
external_server/modules/car_accessory_module/include/: external_server_interface.h
external_server/modules/car_accessory_module/proto/: CarAccessoryModule.pb.cc  CarAccessoryModule.pb.h
external_server/modules/car_accessory_module/source/: car_accessory_api.cpp
external_server/protobuf/: ExternalProtocol_pb2.py
external_server/server/: all_cars.py  single_car.py
external_server/server_module/: command_waiting_thread.py  server_module.py
old_tests/: test_checker.py  test_command_messages_checker.py  test_external_server_api_client.py  test_mqtt_client.py  test_order_checker.py
tests/: __main__.py  config.json  test_mqtt_client.py  test_session_timeout_checker.py
tests/api_access/: test_api_adapter.py  test_api_client.py  test_command_wait_thread.py
tests/api_client/: test_api_client.py
tests/checkers/: test_command_checker.py  (+3 more)
(+58 files in other folders)
